# SPH1D

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ccpp.yml
inc/: Arrays.h  DataOut.h  Timer.h  artVisc.h  conDen.h  constants.h  dtStep.h  gasEOS.h  init.h  internalForces.h  kernel.h  skCubSpl.h  skGauss.h  sumDen.h  symFind.h  timeIntegrator.h  waterEOS.h
scripts/: gasEOS.py  sphMovie.py  sphPlot.py
src/: Arrays.cpp  DataOut.cpp  Timer.cpp  artVisc.cpp  conDen.cpp  dtStep.cpp  gasEOS.cpp  init.cpp  internalForces.cpp  kernel.cpp  skCubSpl.cpp  skGauss.cpp  sph1D.cpp  sumDen.cpp  symFind.cpp  timeIntegrator.cpp  waterEOS.cpp
